# cgm-data-processor

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintignore  .pylintrc  .tmp_README.md  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  comfig.yml  feature_request.yml  new_format_submission.yml
.github/scripts/: check_uk_english.py  convert_us_to_uk.py  find_us_in_string_literals.py
.github/tools/: convert_us_to_uk.py
.github/workflows/: deploy.yml  tests.yml
CONTRIBUTING_FORMATS/: index.html
about/changelog/: index.html
about/license/: index.html
api/: index.html
api/core/: index.html
api/exporters/: index.html
api/file_parser/: index.html
api/processors/: index.html
api/readers/: index.html
api/reference/: index.html
contributing/formats/: index.html
contributing/guide/: index.html
contributing/license/: index.html
contributing/processors/: index.html
development/contributing/: index.html
development/roadmap/: index.html
docs/: CONTRIBUTING_FORMATS.md  index.md
docs/api/: cleaning.md  core.md  exporters.md  file_parser.md  index.md  loading.md  processors.md  readers.md  reference.md
docs/assets/: new_logo.png:Zone.Identifier
docs/contributing/: formats.md  guide.md  license.md
docs/development/: device_format_configuration_guide.md
docs/getting-started/: index.md  installation.md
docs/installation/: index.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
docs/tutorials/: load_and_export_data.md
docs/user-guide/: data-types.md  errors.md  formats.md  index.md
gastro_eda_book/: _config.yml  _toc.yml  conf.py
gastro_eda_book/_static/: custom.css
gastro_eda_book/content/: x_gastro_eda.ipynb  x_gastro_eda.md
gastro_eda_book/src/: my_module.py
getting-started/: index.html
getting-started/installation/: index.html
installation/: index.html
installation/configuration/: index.html
installation/requirements/: index.html
notebooks/examples/: load_and_export_data.ipynb  load_assess_data.ipynb  x_gastro_eda.ipynb
sample_data/: sample_libreview.csv
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/api/: index.html
site/dev-guide/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/user-guide/: index.html
src/: cli.py
src/aligners/: base.py  cgm.py
src/analysis/: config.py  gaps.py  insulin.py  meals.py  metrics.py
src/core/: aligner.py  alignment.py  data_types.py  exceptions.py  format_registry.py
src/exporters/: __init__.py  base.py  csv.py
src/file_parser/: format_detector.py  format_registry.py
src/parser/: format_detector.py  format_registry.py
src/preprocessing/: alignment.py  alingment.py  (+2 more)
stylesheets/: extra.css
tests/: conftest.py  test_basic.py
user-guide/: index.html
(+146 files in other folders)
